crates/aranya-policy-compiler/tests/data/functions/wrong_color_pure_invalid_call_color.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: pure function not allowed in finish context
  |
5 | finish function g() {
6 |     f()
  |     ^^^ function call not valid in this context
7 | }
  |
